resources/modes/print/print.css
@charset "UTF-8";
/*
  @file Holds ALL styles for Automatic Print Mode
*/

canvas#debug {
  position: absolute;
  display: none;
  background-color: rgba(255,255,255,0.7);
  z-index: 1;
  left: 0;
  top: 0;
}

body.print:before {
  content: "";
  position: fixed;
  top: -10px;
  left: 0;
  width: 100%;
  height: 10px;
  z-index: 100;
  box-shadow: 0px 0px 10px rgba(0,0,0,.8);
}

body {
  margin: 0;
  font-family: sans-serif;
}

/* Prevent selectability of text or other elements */
* {
  -webkit-user-select: none;
  -webkit-user-drag: none;
}

body.home {
  background-color: #ffae1a;
  overflow: hidden;
}

.hidden {
  display: none;
}

body.print {
  background-image:url('images/seamless-wood.jpg');
  background-color: #E3BC83;
}

/* Attempt some kind of button standardization */
button.normal {
  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
  border-radius: 7px;
  font-size: 1em;
  color: #FFF;
  margin-top: 0.3em;
  padding: 0.2em 0.4em;
  background: linear-gradient(to bottom, #3093c7, #1c5a85);
}

button.normal:focus {
  outline: none;
}

@media (max-width: 690px) {
  img.logo {
    top: 7px;
    width: 126px;
    margin-left: -32px;
  }
}

/* Drawing Area */

#scale-container {
  position: absolute;
  top: 30px;
  left: 20px;
  -webkit-transform-origin: 0 0 0;
}

svg#main {
  background-image: url('images/paper_texture.png');
  border: 1px solid #ddd;
  position: absolute;
  box-shadow: 0 0 38px -2px rgba(0,0,0,0.3);
}

svg#main, #sim, #shadow {
  left: 256px;
}

body.print svg#main,
body.print #sim,
body.print #shadow {
  top: 0;
}

body.print-auto svg#main,
body.print-auto #sim,
body.print-auto #shadow {
  left: 0;
}

svg#main #cncserversvg path.selected {
  stroke: blue !important;
  stroke-width: 10 !important;
  stroke-opacity: 1 !important;
}

#shadow {
  position: absolute;
  top: 20px;
  height: 864px;
  width: 1152px;
  z-index: -5;
  margin: 2px auto;
}

#shadow:before, #shadow:after {
  z-index: -1;
  position: absolute;
  content: "";
  bottom: 15px;
  left: 10px;
  width: 50%;
  top: 80%;
  max-width:485px;
  background: rgba(0, 0, 0, 0.6);
  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.6);
  -webkit-transform: rotate(-3deg);
}

#shadow:after {
  -webkit-transform: rotate(3deg);
  right: 10px;
  left: auto;
}

/* Drawing Simulation Canvas */
canvas#sim {
  position: absolute;
  background-color: rgba(255,255,255,0.8);
  top: 20px;
  z-index: 5;
  display: none;
}

/* Animation Keyframes */

@-webkit-keyframes hover-pulse {
  0%   { box-shadow: 0 0 2px 5px red; }
  50%  { box-shadow: 0 0 6px 8px red; }
  100%  { box-shadow: 0 0 2px 5px red; }
}

@-webkit-keyframes hover-pulse-selected {
  0%   { box-shadow: 0 0 0 3px #fff, 0 0 2px 8px #33F; }
  50%  { box-shadow: 0 0 0 3px #fff, 0 0 6px 8px #33F; }
  100%  { box-shadow: 0 0 0 3px #fff, 0 0 2px 8px #33F; }
}


@-webkit-keyframes hover-button {
  0%   { box-shadow: 0 0 2px 8px #33F; }
  50%  { box-shadow: 0 0 6px 8px #33F; }
  100%  { box-shadow: 0 0 2px 8px #33F; }
}

@-webkit-keyframes pause-active {
  0%   { box-shadow: 0 0 10px 10px #04aa1e; }
  50%  { box-shadow: 0 0 10px 5px #04aa1e; }
  100%  { box-shadow: 0 0 10px 10px #04aa1e; }
}

nav#tools div.static {
  background-color: #CCCCCC;
  border-radius: 15px 15px 15px 15px;
  margin: 13px -7px -13px;
  padding: 7px;
  overflow: hidden;
  border-top: 3px solid #000000;
  position: relative;
}

nav#tools div.static a {
  display: block;
  width: 40%;
  height: 50px;
  text-align: center;
  border-radius: 15px;
}

nav#tools div.static a#colorx {
  color: red;
  float: left;
  font-size: 3.5em;
  line-height: 0.9em;
  width: 99%;
}

nav#tools a, nav#tools a:link  {
  display: block;
  color: white;
  text-decoration: none;
}

nav#tools #colors {
  background-color: #FFFFFF;
  border-radius: 13px 13px 13px 13px;
  box-shadow: 0 0 2px 8px #CCCCCC, 0 0 0 9px #777777;
  margin-left: 91px;
  padding: 1px 7px 9px;
  position: relative;
}

nav#tools .color {
  border: 2px solid #999;
  border-radius: 135px 135px 135px 135px / 95px 95px 95px 95px;
  height: 58px;
  line-height: 55px;
  margin-top: 10px;
  text-align: center;
  width: 85px;
}

nav#tools .color.selected,
nav#tools .water.selected {
  -webkit-animation-name: hover-pulse-selected;
  -webkit-animation-duration: 3000ms;
  -webkit-animation-iteration-count: infinite;
}

/* Nav Controls & Button Graphics */
fieldset#control {
  background-color: rgba(255,255,255,0.6);
  border: 1px solid #C9A165;
  border-radius: 0.5em 0.5em 0.5em 0.5em;
  box-shadow: 0 0 8px 2px #EBC089 inset, 1px 1px 3px rgba(0, 0, 0, 0.2);
  padding: 0.75em 0;
  position: absolute;
  right: 1em;
  width: 14em;
  margin-top: 1em;
  -webkit-transform-origin: right top;
  padding-bottom: 0;
}

#control button {
  display: block;
  float: left;
}

#control h2 {
  font-size: 1em;
  margin: 0 0 0.5em;
  text-shadow: 0 2px 1px #EEEEEE;
}

#control button:hover {
  -webkit-animation-name: hover-button;
  -webkit-animation-duration: 3000ms;
  -webkit-animation-iteration-count: infinite;
}

#control fieldset {
  padding: 0 7px 7px;
  border: 0;
  border-top: 1px solid #C9A165;
  margin: 0.5em 0;
}

#control fieldset legend {
  font-size: 0.9em;
  text-align: left;
  font-weight: bold;
}

#control div.check-control {
  float: left;
  margin-bottom: 0.6em;
  margin-bottom: 0.25em;
}

/* Auto print specific */
body.print-auto fieldset#control {
  top: 20px;
}

body.print-auto #control>legend {
  width: 49%;
  font-weight: bold;
  text-align: center;
  font-size: 1.2em;
  position: absolute;
  top: -26px;
  right: 54px;
}

body.print-auto #buttons {
  margin-top: -9px;
  padding-top: 5px;
  margin-bottom: 6px;
}

/* Control panel specific button adjustments */
body.print-auto #buttons button.normal {
  font-size: 1.1em;
  float: none;
  margin: 0.2em auto;
  display: block;
  width: 190px;
}

/* Status Specific */
#status {
  text-align: center;
}

#status progress {
  width: 100%;
}

.print #pause {
  background: linear-gradient(to bottom, #eff7f9 0%,rgb(249, 234, 239) 50%,rgb(242, 218, 230) 51%,rgb(249, 229, 231) 100%);
  border-radius: 11px;
  box-shadow: 0 0 14px 6px rgba(255,0,0,0.5);
  float: none;
  margin: 0.5em auto;
  display: block;
  height: 1.9em;
  width: 5em;
  font-size: 24px;
  font-weight: bold;
}

.print #pause.ready {
  box-shadow: 0 0 14px 6px rgba(0,255,0,0.5);
  background: linear-gradient(to bottom, #eff7f9 0%,rgb(236, 249, 234) 50%,rgb(190, 250, 185) 51%,rgb(189, 245, 180) 100%);
}

.print #pause:disabled {
  box-shadow: 0 0 14px 6px rgba(155, 155, 155, 0.5);
  background: linear-gradient(to bottom, #ECECEC 0%,rgb(238, 238, 238) 50%,rgb(236, 236, 236) 51%,rgb(173, 173, 173) 100%);
}

#pause:hover {
  box-shadow: 0 0 14px 10px rgba(255,0,0,1);
  -webkit-animation: none;
}

.print #pause.active {
  background: linear-gradient(to bottom, #eff7f9 0%,rgb(236, 249, 234) 50%,rgb(190, 250, 185) 51%,rgb(189, 245, 180) 100%);
  box-shadow: 0 0 14px 6px #04aa1e;

  -webkit-animation-name: pause-active;
  -webkit-animation-duration: 1500ms;
  -webkit-animation-iteration-count: infinite;
}

.print #cancel {
  border: none;
  font-size: 17px;
  border-radius: 11px;
  margin: 1.1em auto;
  margin-bottom: 0.5em;
  float: none;
  background-color: transparent;
  text-decoration: underline;
  color: red;
  cursor: pointer;
  font-weight: bold;
}

.print #cancel:disabled {
  color: #777;
  cursor: default;
  font-style: italic;
}

#statusmessage {
  font-size: 0.9em;
  height: 2em;
  margin-top: 0.5em;
  line-height: 1em;
  margin-bottom: 0.6em;
}


#control button:disabled, #control button:disabled:hover {
  opacity: 0.5;
  animation: none;
  -webkit-animation: none;
}

/* ICONS! Use anywhere */
@font-face {
  src: url(icons.ttf) format("truetype");
  font-family: "fontello";
  font-style: normal;
}

[class^="icon-"]:before, [class*=" icon-"]:before {
  font-family: "fontello";
  font-style: normal;
  font-weight: normal;
  speak: none;

  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */

  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;

  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;
}

.icon-picture-1:before { content: '\e811'; } /* '' */
.icon-params:before { content: '\e805'; } /* '' */
.icon-cog-alt:before { content: '\e80f'; } /* '' */
.icon-angle-circled-left:before { content: '\e80a'; } /* '' */
.icon-angle-circled-right:before { content: '\e80b'; } /* '' */
.icon-angle-circled-up:before { content: '\e80c'; } /* '' */
.icon-angle-circled-down:before { content: '\e80d'; } /* '' */
.icon-floppy:before { content: '\e810'; } /* '' */
.icon-picture:before { content: '\e804'; } /* '' */
.icon-gamepad:before { content: '\e807'; } /* '' */
.icon-shuffle:before { content: '\e809'; } /* '' */
.icon-cloud-thunder:before { content: '\e800'; } /* '' */
.icon-flight:before { content: '\e808'; } /* '' */
.icon-brush:before { content: '\e802'; } /* '' */
.icon-edit:before { content: '\e803'; } /* '' */
.icon-print:before { content: '\e806'; } /* '' */
.icon-download-cloud:before { content: '\e80e'; } /* '' */
.icon-home:before { content: '\e801'; } /* '' */

